--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ jobs:
   include:
   - stage: lint
     script: flake8 --max-line-length 120
+script: echo "Success!"
 deploy:
   provider: pypi
   user: "__token__"
