--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
 - '3.7'
 - '3.8'
 before_install:
+- python -m pip install --upgrade pip
 - pip install flake8
 install:
 - pip install --upgrade .
